Adding mksdcard and mac binaries
These are (ideally) temporary, and will be removed once enough users are
on a version of studio that knows to look in the new place
(sdk/emulator/)

Change-Id: Ia0ff8fec6b3df6ea67201330de67abcc22acfc96

--- a/build.gradle
+++ b/build.gradle
@@ -66,13 +66,32 @@ sdk {
         }
     }
 
-    common(mac, linux) {
+    linux {
+        item('files/emulator_wrapper/mksdcard') {
+            notice null
+        }
         item('files/emulator_wrapper/emulator') {
-	    notice null
-	}
+            notice null
+        }
         item('files/emulator_wrapper/emulator-check') {
-	    notice null
-	}
+            notice null
+        }
+    }
+    mac {
+        item('files/emulator_wrapper/mksdcard-mac') {
+            name 'mksdcard'
+            notice null
+        }
+        item('files/emulator_wrapper/emulator-mac') {
+            name 'emulator'
+            notice null
+        }
+        item('files/emulator_wrapper/emulator-check-mac') {
+            name 'emulator-check'
+            notice null
+        }
+    }
+    common(linux, mac) {
         item("$rootProject.projectDir.parentFile/prebuilts/tools/common/proguard/proguard4.7/bin/proguard.sh") {
             into 'proguard/bin'
             notice null
@@ -91,11 +110,11 @@ sdk {
 
     windows {
         item('files/emulator_wrapper/emulator.exe') {
-	    notice null
-	}
+            notice null
+        }
         item('files/emulator_wrapper/emulator-check.exe') {
-	    notice null
-	}
+            notice null
+        }
         item("$rootProject.projectDir.parentFile/prebuilts/tools/common/proguard/proguard4.7/bin/proguard.bat") {
             into 'proguard/bin'
             notice null
