--- a/files/tools_source.properties
+++ b/files/tools_source.properties
@@ -1,6 +1,6 @@
 Pkg.UserSrc=false
 Pkg.Revision=26.0.0
 Platform.MinPlatformToolsRev=20
-Dependencies: "emulator"
-Pkg.Path: "tools"
-Pkg.Desc: "Android SDK Tools"
+Dependencies=emulator
+Pkg.Path=tools
+Pkg.Desc=Android SDK Tools
